tests/paczka1/small_fuzzy/76797648.err
Error in line 7: qvQ5KCy S32 11,6
Error in line 3: qFRQZe A443 18,7
Error in line 13: qvQ5KCy A68 86,8
